eks/k8s-curso/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python-app  #  Requerido, debe coincidir con el deployment
  ports:
  - protocol: TCP  #  Requerido
    port: 80  #  Requerido, puerto externo del servicio
    targetPort: 5000  #  Requerido, puerto interno del contenedor
  type: ClusterIP  #  Opcional, default: ClusterIP
