eks/k8s-curso/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"  #  Opcional, reescribe URL
spec:
  rules:
  - host: python-app.local  #  Opcional, cambiar según el dominio
    http:
      paths:
      - path: /
        pathType: Prefix  #  Requerido
        backend:
          service:
            name: python-service  #  Requerido, debe coincidir con el Service
            port:
              number: 80  #  Requerido, debe coincidir con el Service
